* Author: Mike FABIAN <mfabian@redhat.com>
* 01 Jul 2016 Released 1.4.6 version
* Pass modifier key combinations through if there is no possible transliteration for that key combination (Resolves: rhbz#1351748)

* Author: Mike FABIAN <mfabian@redhat.com>
* 11 May 2016 Released 1.4.5 version
* Do not colourize the preëdit dark blue, that is unreadable on dark backgrounds (Resolves: rhbz#1335201)
* Set the size of the libm17n mconv conversion buffer correctly (Resolves: rhbz#1335021)

* Author: Mike FABIAN <mfabian@redhat.com>
* 10 May 2016 Released 1.4.4 version
* self._current_imes needs to be updated before self.init_transliterators() (Resolves: rhbz#1334579)

* Author: Mike FABIAN <mfabian@redhat.com>
* 28 Apr 2016 Released 1.4.3 version
* Fix AttributeError: 'editor' object has no attribute 'trans (Resolves: rhbz#1331338)

* Author: Mike FABIAN <mfabian@redhat.com>
* 27 Apr 2016 Released 1.4.2 version
* Fix mistyped variable name (Resolves: rhbz#1330461)
* Add option to remember the preëdit input method used last
* Update German translations
* The combobox in the setup tool should show the first supported ime from dconf

* Author: Mike FABIAN <mfabian@redhat.com>
* 20 Apr 2016 Released 1.4.1 version
* Avoid unnessary initialization of transliterators when the set of input methods has not changed
* Add  property menu to choose the current preedit input method
* Display preëdit input method in aux_string also when number of candidates is not shown
* Add some tooltips to the setup tool
* Update German translations

* Author: Mike FABIAN <mfabian@redhat.com>
* 08 Apr 2016 Released 1.4.0 version
* Call IBus.Bus() in __main__, not in __init__ of class SetupUI (Resolves: rhbz#1325338)
* Multilingual support, more than one language in an engine
* Simple option in the setup tool to enable bilingual support (one language + Enlish)
* The default of the option “Add direct input” in the setup tool should be false (bug found by Pravin Satpute)